feat: add load data fron net and db

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.hi.dhl.pokemon">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".PokemonGoApp"
@@ -25,6 +26,7 @@
 
         <activity
             android:name=".ui.detail.DetailActivity"
+            android:theme="@style/ActivityTheme"
             android:screenOrientation="portrait" />
 
         <provider
