--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ android {
 
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
+        freeCompilerArgs += ["-Xopt-in=kotlin.RequiresOptIn"]
     }
 
     buildFeatures {
@@ -60,6 +61,7 @@ dependencies {
     implementation Fragment.runtimeKtx
     implementation Depend.timber
     implementation Room.runtime
+    implementation Room.ktx
     kapt Room.compiler
     implementation Anko.common
     implementation Koin.core
@@ -82,6 +84,7 @@ dependencies {
     kapt Hilt.compiler
 
     implementation Depend.jDatabinding
+    implementation Depend.jCustomView
 
     implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
 
