style: optimzie ui
feat: optimzie reuqest network

style: add ic_arrow

chore: optimize ui

style: optimize ui

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,9 +84,8 @@ dependencies {
     kapt Hilt.compiler
 
     implementation Depend.jDatabinding
-    implementation Depend.jCustomView
-
-    implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
+//    implementation Depend.jCustomView
+    implementation project(":jcustomview")
 
     testImplementation Depend.junit
     androidTestImplementation Depend.androidTestJunit
