style: optimize code
feat: add Copyright

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,19 @@
+/*
+ * Copyright 2020. hi-dhl (Jack Deng)
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *    http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 import com.hi.dhl.plugin.*
 
 apply plugin: 'com.android.application'
@@ -30,15 +46,6 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
-    }
-
-    sourceSets {
-        androidTest.java.srcDirs += "src/test-common/java"
-        test.java.srcDirs += "src/test-common/java"
-        test.assets.srcDirs += files("$projectDir/schemas".toString())
-        main.java.srcDirs += 'src/main/kotlin/'
-        main.java.srcDirs += 'build/generated/source/protos/main/java'
-        test.java.srcDirs += 'src/test/kotlin/'
     }
 
     kotlinOptions {
