--- a/checkVersions.gradle
+++ b/checkVersions.gradle
@@ -1,30 +1,11 @@
-/*
- * Copyright 2020. hi-dhl (Jack Deng)
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
 apply plugin: "com.github.ben-manes.versions"
 
 dependencyUpdates.resolutionStrategy {
     componentSelection { rules ->
         rules.all { ComponentSelection selection ->
-            boolean rejected = ['alpha', 'beta', 'rc', 'cr', 'm'].any { qualifier ->
-                selection.candidate.version ==~ /(?i).*[.-]${qualifier}[.\d-]*/
-            }
-            if (rejected) {
-                selection.reject('Not stable')
-            }
+            def stableKeyword = ['RELEASE', 'FINAL', 'GA','alpha', 'beta'].any { qualifier -> version.toUpperCase().contains(qualifier) }
+            def regex = /^[0-9,.v-]+(-r)?$/
+            !stableKeyword && !(version ==~ regex)
         }
     }
 }
