feat: upgrad checkVersions plugin

--- a/checkVersions.gradle
+++ b/checkVersions.gradle
@@ -1,11 +1,23 @@
 apply plugin: "com.github.ben-manes.versions"
 
-dependencyUpdates.resolutionStrategy {
-    componentSelection { rules ->
-        rules.all { ComponentSelection selection ->
-            def stableKeyword = ['RELEASE', 'FINAL', 'GA','ALPHA', 'BETA'].any { qualifier -> version.toUpperCase().contains(qualifier) }
-            def regex = /^[0-9,.v-]+(-r)?$/
-            !stableKeyword && !(version ==~ regex)
+def isNonStable = { ComponentSelection selection ->
+    boolean rejected = ['release', 'final', 'alpha', 'beta', 'rc', 'ga'].any { qualifier ->
+        selection.candidate.version ==~ /(?i).*[.-]${qualifier}[.\d-]*/
+    }
+    return rejected
+}
+
+tasks.named("dependencyUpdates").configure {
+    // Example 3: using the full syntax
+    resolutionStrategy {
+        componentSelection {
+            all { ComponentSelection selection ->
+
+                if (isNonStable(selection)) {
+                    selection.reject('Release candidate')
+                }
+
+            }
         }
     }
 }
