--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,15 @@
 apply from: './checkVersions.gradle'
+
 buildscript {
-    ext.kotlin_version = "1.4.0"
+    ext.kotlin_version = "1.4.10"
     repositories {
         google()
-        jcenter()
+        maven { url "https://maven.aliyun.com/repository/public" }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.0"
+        classpath "com.android.tools.build:gradle:4.1.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "com.github.ben-manes:gradle-versions-plugin:0.29.0"
+        classpath "com.github.ben-manes:gradle-versions-plugin:0.36.0"
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28.1-alpha'
     }
 }
@@ -16,7 +17,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        maven { url "https://maven.aliyun.com/repository/public" }
     }
 }
 
