refactor: delete kotlin-android-extensions

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,8 @@ plugins{
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id 'kotlin-android-extensions'
     id 'dagger.hilt.android.plugin'
+    id 'kotlin-parcelize'
 }
 
 
