--- a/checkVersions.gradle
+++ b/checkVersions.gradle
@@ -1,7 +1,7 @@
 apply plugin: "com.github.ben-manes.versions"
 
 def isNonStable = { ComponentSelection selection ->
-    boolean rejected = ['release', 'final', 'alpha', 'beta', 'rc', 'ga'].any { qualifier ->
+    boolean rejected = ['final', 'alpha', 'beta', 'ga'].any { qualifier ->
         selection.candidate.version ==~ /(?i).*[.-]${qualifier}[.\d-]*/
     }
     return rejected
